private-hosting/gatus/ingress-gatus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: status.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: gatus, port: { name: http } }
